# SimpleNeuralNet

./: .gitignore  CMakeLists.txt
cmake/: CMakeLists.txt  Eigen.cmake
include/: SimpleNeuralNet.h
include/Layers/: BaseLayer.h  Dense.h
src/: CMakeLists.txt  SimpleNeuralNet.cpp
src/Layers/: Dense.cpp
